page padding set,nav ul not aligned properly

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
     <section>
     <div class="container">
+        
     <nav>
+        <div class="logo">
+            <!-- <img src="REXAIR.png"> -->
+        </div>
         <ul>
             <li><a href="#home">HOME</a></li>
             <li><a href="#home">ABOUT</a></li>
@@ -20,6 +24,15 @@
             <li><a href="#home">PRACTICE</a></li>
         </ul>
     </nav>
+</div>
+<div class="pad">
+    <div class="easy">
+        <b>It’s never easy...<br><br>
+When it comes to family.</b>
+    </div>
+    <div class="set">But we can set<br>
+        everything straight.
+        </div>
 </div>
    <div class="firstimage">
        <img class="family" src="family.jpg">
@@ -48,7 +61,7 @@
             erat ornare.”    
         </div>
         <div id="quote">
-            -John Doe and Jane Doe-
+            -Ojo Olatunde-
         </div>
     </div>
 </div>
@@ -139,6 +152,17 @@
         <div class="button4"> <button type="button">CLICK TO SEND US AN EMAIL</button>
                  </div>
         </div>
+</div>
+<div class="end">
+    <div class="footer">
+        <div class="social">
+
+        </div>
+        <div class="copyright">
+            &copy; COPYRIGHT 2022 OJO OLATUNDE. ALL RIGHTS RESERVED.
+        </div>
+
+    </div>
 </div>
 
 </body>
